# ChessEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Namnlöst diagram.drawio  README.md  architecture.drawio  callgrind.out.6745  dump_repo.py  ideas.txt  repo_dump.md
ChessEngine/movegen/: BishopGenerator.cpp  BishopGenerator.h  CMakeLists.txt  CastlingGenerator.cpp  CastlingGenerator.h  CheckDetection.cpp  CheckDetection.h  CommonLogic.h  KingGenerator.cpp  KingGenerator.h  KnightGenerator.cpp  KnightGenerator.h  MoveGenerator.cpp  MoveGenerator.h  Movelist.h  PawnGenerator.cpp  PawnGenerator.h  QueenGenerator.cpp  QueenGenerator.h  RayLogic.cpp  RayLogic.h  RookGenerator.cpp  RookGenerator.h
ChessEngine/src/logic/movegen/: BishopGenerator.cpp  BishopGenerator.h  CMakeLists.txt  CastlingGenerator.cpp  CastlingGenerator.h  CheckDetection.cpp  CheckDetection.h  KingGenerator.cpp  KingGenerator.h  KnightGenerator.cpp  KnightGenerator.h  MoveGenerator.cpp  MoveGenerator.h  PawnGenerator.cpp  PawnGenerator.h  QueenGenerator.cpp  QueenGenerator.h  RayLogic.cpp  RayLogic.h  RookGenerator.cpp  RookGenerator.h  bishop_gen.cpp  bishop_gen.h  castle_gen.cpp  castle_gen.h  castling_gen.cpp  castling_gen.h  check_detection.cpp  check_detection.h  containers.cpp  containers.h  king_gen.cpp  king_gen.h  knight_gen.cpp  knight_gen.h  move_gen.cpp  move_gen.h  pawn_gen.cpp  pawn_gen.h  queen_gen.cpp  (+7 more)
ChessEngine/src/logic/movegen/bitmasks/: CMakeLists.txt  KingBitmasks.cpp  KingBitmasks.h  KnightBitmasks.cpp  KnightBitmasks.h  PawnBitmasks.cpp  PawnBitmasks.h  RayBitmasks.cpp  RayBitmasks.h  (+8 more)
ChessEngine/tests/: CMakeLists.txt  test_config.h  tools.cpp
ChessEngine/tests/bits/: BitBasics.cpp  BitBasics_test.cpp  BitLogic.cpp  BitMasks.cpp  BitMasks_test.cpp  BitUtils_test.cpp  Bitmasks_test.cpp  CMakeLists.txt  ChessBitTools_test.cpp  ChessUtils_test.cpp  KingBitMasks_test.cpp  KnightBitMasks_test.cpp  PawnBitMasks_test.cpp  RayBitMasks_test.cpp
ChessEngine/tests/board/: BitBoards_test.cpp  Bitboards_test.cpp  CMakeLists.txt
ChessEngine/tests/data/fens/: sample_fens.py  sampled_100.csv  sampled_1000.csv  sampled_250.csv
ChessEngine/tests/data/pgn/: zobrist_challenge.pgn
ChessEngine/tests/engine/: CMakeLists.txt
ChessEngine/tests/engine/perft/: CMakeLists.txt  perftBase_test.h  perftPosFive_test.cpp  perftPosThree_test.cpp  perftPosTwo_test.cpp  perftStartPos_test.cpp  perft_base_test.h  perft_pos_five_test.cpp  perft_pos_three_test.cpp  perft_pos_two_test.cpp  perft_start_pos_test.cpp
ChessEngine/tests/game/: BaseMoveGeneratorTest.h  BitboardInit.cpp  CMakeLists.txt  ChessBoard_test.cpp  MakeUnmakeMove_test.cpp  MoveGenerator_Bishops_test.cpp  MoveGenerator_Castling_test.cpp  MoveGenerator_Kings_test.cpp  MoveGenerator_Knights_test.cpp  MoveGenerator_MoveCounts_test.cpp  MoveGenerator_Pawns_test.cpp  MoveGenerator_Queens_test.cpp  MoveGenerator_Rooks_test.cpp  bitboard_init.cpp
ChessEngine/tests/game/board/: Bitboards_test.cpp  CMakeLists.txt
ChessEngine/tests/game/masks/: CMakeLists.txt  KingBitmasks_test.cpp  KnightBitmasks_test.cpp  PawnBitmasks_test.cpp  RayBitmasks_test.cpp
ChessEngine/tests/game/move/: CMakeLists.txt  MakeUnmakeMove_test.cpp
ChessEngine/tests/game/movegen/: BaseGenerator_test.h  BishopGenerator_test.cpp  CMakeLists.txt  CastlingGenerator_test.cpp  CheckDetection_test.cpp  KingGenerator_test.cpp  KnightGenerator_test.cpp  PawnGenerator_test.cpp  QueenGenerator_test.cpp  RookGenerator_test.cpp
ChessEngine/tests/io/engine/: CMakeLists.txt
ChessEngine/tests/logic/: CMakeLists.txt
ChessEngine/tests/logic/attack_tables/: CMakeLists.txt  king_attack_table_test.cpp  knight_attack_table_test.cpp  pawn_attack_table_test.cpp  ray_attack_table_test.cpp
ChessEngine/tests/logic/makemove/: CMakeLists.txt  MakeUnmakeMove_test.cpp  make_unmake_move_test.cpp
ChessEngine/tests/logic/mass_fen/: CMakeLists.txt  depth_one_make_gen_hash_test.cpp  mass_fen_test_fixture.h
ChessEngine/tests/logic/movegen/: BaseGenerator_test.h  BishopGenerator_test.cpp  CMakeLists.txt  CastlingGenerator_test.cpp  CheckDetection_test.cpp  KingGenerator_test.cpp  KnightGenerator_test.cpp  PawnGenerator_test.cpp  QueenGenerator_test.cpp  RookGenerator_test.cpp  base_gen_test.h  bishop_gen_test.cpp  castling_gen_test.cpp  check_detection_test.cpp  king_gen_test.cpp  knight_gen_test.cpp  pawn_gen_test.cpp  queen_gen_test.cpp  rook_gen_test.cpp
ChessEngine/tests/masks/: CMakeLists.txt  KingBitMasks_test.cpp  KingBitmasks_test.cpp  KnightBitMasks_test.cpp  KnightBitmasks_test.cpp  PawnBitMasks_test.cpp  PawnBitmasks_test.cpp  RayBitMasks_test.cpp  RayBitmasks_test.cpp
ChessEngine/tests/mass_fen/: CMakeLists.txt  depth_one_make_gen_hash_test.cpp  low_depth_perft.cpp  mass_fen_test_fixture.h
ChessEngine/tests/mass_fen/data/: custom copy.csv  custom.csv  sample_fens.py  sampled_1000_A.csv  sampled_1000_B.csv  sampled_150_A.csv  sampled_150_B.csv
ChessEngine/tests/model/: CMakeLists.txt
ChessEngine/tests/model/board/: Bitboards_test.cpp  CMakeLists.txt  bitboards_test.cpp
ChessEngine/tests/model/position/: CMakeLists.txt  bitboards_test.cpp
ChessEngine/tests/move/: CMakeLists.txt  MakeUnmakeMove_test.cpp
ChessEngine/tests/movegen/: BaseGenerator_test.h  BishopGenerator_test.cpp  CMakeLists.txt  CastlingGenerator_test.cpp  CheckDetection_test.cpp  KingGenerator_test.cpp  KnightGenerator_test.cpp  PawnGenerator_test.cpp  QueenGenerator_test.cpp  RookGenerator_test.cpp
ChessEngine/tests/perft/: CMakeLists.txt  perftBase.h  perftPosFive.cpp  perftPosThree.cpp  perftPosTwo.cpp  perftStartPos.cpp  perft_test.cpp
ChessEngine/tests/ponder/evaluation/: CMakeLists.txt
ChessEngine/tests/ponder/perft/: CMakeLists.txt  perftBase_test.h  perftPosFive_test.cpp  perftPosThree_test.cpp  perftPosTwo_test.cpp  perftStartPos_test.cpp
ChessEngine/tests/search/: CMakeLists.txt  perft.cpp  perftBase.h  perftPosFive.cpp  perftPosThree.cpp  perftPosTwo.cpp  perftStartPos.cpp
ChessEngine/tests/utils/: BitBasics_test.cpp  CMakeLists.txt  ChessUtils_test.cpp  bit_logic.cpp  dummy_test.cpp
(+448 files in other folders)
